code review fix.  Also fixed Sign Up button when on small viewports

--- a/packages/synapse-react-client/src/components/MailchimpSubscribeSection/MailchimpSubscribeSection.module.scss
+++ b/packages/synapse-react-client/src/components/MailchimpSubscribeSection/MailchimpSubscribeSection.module.scss
@@ -5,7 +5,12 @@
 }
 
 .emailInput:global(.MuiTextField-root) {
-  min-width: 350px;
+  width: 100%;
+
+  @media (min-width: 600px) {
+    width: auto;
+    min-width: 350px;
+  }
 
   :global(.MuiOutlinedInput-root) {
     border-radius: 4px;
@@ -19,6 +24,7 @@
 
 .submitButton:global(.MuiButton-root) {
   border-radius: 8px;
+  white-space: nowrap;
 }
 
 .formWrapper {
